--- a/s3r.service
+++ b/s3r.service
@@ -1,10 +1,12 @@
 [Unit]
 Description=s3r service
-After=bluetooth.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=simple
 Restart=always
+RestartSec=2
 ExecStart=/usr/bin/python3 -u /usr/local/bin/s3r
 
 [Install]
